[package]
name = "frameless-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
parity-scale-codec = "3.2.2"
serde_json = "1.0.91"
sp-core = "12.0.0"
sp-runtime = "14.0.0"
tungstenite = "0.18.0"
url = "2.3.1"
